--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ img {
 .header-container {
   display: flex;
   align-items: center;
+  padding: 0 15px;
 }
 
 .header-logo {
@@ -265,8 +266,11 @@ img {
 @media screen and (min-width: 1158px) {
   .hero {
     padding: 188px 0;
+    max-width: 1440px;
+    margin:0 auto;
   }
 }
+
 
 .hero-bg-image {
   width: 100%;
@@ -1282,7 +1286,8 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
  position: fixed;
   top: 0;
   left: 0;
-  width: 320px;
+     width: 100vw;
+    height: 100vh;
   background-color: #fff;
   z-index: 999;
   transform: translateX(100%);
@@ -1306,7 +1311,7 @@ transform: translateX(0);
 
 @media screen and (max-width: 767px) {
 .mobile-menu {
-max-width: 320px;
+max-width: 428px;
 }
 .mobile-container{
   display: block;
@@ -1318,8 +1323,7 @@ position: relative;
 height: 100%;
 display: flex;
 flex-direction: column;
-padding-top: 72px;
- padding-left: 16px;
+padding: 72px 40px 40px 16px;
 margin-left: auto;
 margin-right: auto;
 overflow: auto;
